--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-images-uploading": "^3.1.7",
+        "react-multi-carousel": "^2.8.5",
         "react-router-dom": "^6.28.0"
     }
 }
