--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "classnames": "^2.5.1",
+        "leaflet-css": "^0.1.0",
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-images-uploading": "^3.1.7",
+        "react-leaflet": "^4.2.1",
         "react-multi-carousel": "^2.8.5",
         "react-router-dom": "^6.28.0"
     }
