--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/react-fontawesome": "^0.2.2",
         "classnames": "^2.5.1",
+        "emoji-picker-react": "^4.12.0",
         "leaflet-css": "^0.1.0",
         "normalize.css": "^8.0.1",
         "react": "^18.3.1",
